--- a/html/recommend/recommend.html
+++ b/html/recommend/recommend.html
@@ -91,8 +91,8 @@
     </div>
   </div>
   <main class="main">
-    <p class="sol" data-aos="fade-up">魅力基隆，這樣玩</p>
-    <div class="fit">
+    <p class="sol" data-aos="fade-up" id="station">魅力基隆，這樣玩</p>
+    <div class="fit" >
       <div class="line">
         <img src="./images/icon/line.svg" >
       </div>
@@ -100,48 +100,48 @@
         <p class="title">景點路線</p>
         <div class="background">
           <div class="station">
-            <p class="content_1">八斗子車站</p>
+            <p class="content_1"><a href="#station">八斗子車站</a></p>
             <p class="walk">走路2分鐘</p>
             <img class="point_1" src="./images/icon/point1.png">
             <img class="vector_1" src="./images/icon/vector.png">
           </div>
           <div class="bike">
-            <p class="content_1">深澳鐵道自行車</p>
+            <p class="content_1"><a href="#bike">深澳鐵道自行車</a></p>
             <p class="walk">走路5分鐘</p>
             <img class="point_1" src="./images/icon/point2.png">
             <img class="vector_1" src="./images/icon/vector.png">
           </div>
           <div class="food">
-            <p class="content_1">八斗子火車站周邊美食：望海巷石頭火鍋</p>
+            <p class="content_1"><a href="#spot">八斗子火車站周邊美食：望海巷石頭火鍋</a></p>
             <p class="walk_1">走路11分鐘</p>
             <img class="point_1" src="./images/icon/point3.png">
             <img class="vector_1" src="./images/icon/vector.png">
           </div>
           <div class="mu">
-            <p class="content_1">國立海洋科技博物館</p>
+            <p class="content_1"><a href="#mu">國立海洋科技博物館</a></p>
             <p class="walk">走路11分鐘</p>
             <img class="point_1" src="./images/icon/point4.png">
             <img class="vector_1" src="./images/icon/vector.png">
           </div>
           <div class="park">
-            <p class="content_1">潮境公園</p>
+            <p class="content_1"><a href="#park">潮境公園</a></p>
             <p class="walk">搭公車15分鐘</p>
             <img class="point_1" src="./images/icon/point5.png">
             <img class="vector_1" src="./images/icon/vector.png">
           </div>
           <div class="night">
-            <p class="content_1">基隆廟口夜市</p>
+            <p class="content_1"><a href="#night">基隆廟口夜市</a></p>
             <img class="point_2" src="./images/icon/point6.png">
           </div>
         </div>
       </article>
-      <section class="content">
-        <div class="station ">
+      <section class="content" id="station">
+        <div class="station">
           <div class="background">
               <p class="title">
                 八斗子車站
               </p>
-              <p class="content">
+              <p class="content" id="bike">
                 有「北台灣多良車站」的八斗子車站是臺灣鐵路管理局所屬深澳線位在基隆市中正區砂子里的鐵路車站，，全線最後1989年停止辦理客、貨運，為復駛供八斗子國立海洋科技博物館聯外交通使用做準備，2014年1月9日起正式恢復營運載客。
               </p>
               <img src="./images/station.png">
@@ -163,7 +163,7 @@
             <p class="title">
               深澳鐵道自行車
             </p>
-            <p class="content">
+            <p class="content" id="spot">
               由新北市政府與交通部臺灣鐵路管理局合作打造的深澳鐵道自行車，以暢遊山海為主題，結合了沿岸無敵海景、自然生態、改造礦坑和鐵道等特色，讓遊客可以騎著外型超萌的彩色河豚造型自行車，在踩踏中一邊看海吹海風，，所有旅行的願望一次滿足。
             </p>
             <img src="./images/bike.jpg">
@@ -172,7 +172,7 @@
         <div class="time" data-aos="fade-down"
         data-aos-easing="linear"
         data-aos-duration="1500">
-          <div class="text">
+          <div class="text" >
             <p>深澳鐵道自行車</p>
             <p>走路5分鐘</p>
             <img src="./images/icon/vector.svg">
@@ -184,7 +184,7 @@
             <p class="title">
               望海巷石頭火鍋
             </p>
-            <p class="content">
+            <p class="content" id="mu">
               八斗子車站因鄰近望幽谷、潮境公園等景點，因此周邊美食店家林立，因此周邊美食店家林立，其中的望海巷石頭火鍋頗具特色，濃郁的湯頭配上豐富的基隆海產，是您不可錯過的美食呦!錯過的美食呦!
             </p>
             <img src="./images/food.jpg">
@@ -205,7 +205,7 @@
             <p class="title">
               國立海洋科技博物館
             </p>
-            <p class="content">
+            <p class="content" id="park">
               位於基隆市東側的八斗子地區，西鄰八斗子、碧砂漁港，東接東北角海岸風景特定區，有台2線（濱海公路）及台鐵鐵路深澳支線經過。現有建館基地約有48公頃，潮境公園、望幽谷等知名景點皆屬館區腹地。館區主體建物分別為主題館區、海洋劇場、區域探索館。
             </p>
             <img src="./images/mu.jpg">
@@ -226,7 +226,7 @@
             <p class="title">
               潮境公園
             </p>
-            <p class="content">
+            <p class="content" id="night">
               潮境公園園區原本為一處垃圾集放地，後來經海洋科技博物館籌備處規劃改建後，成為一處看海賞景的最佳去處，而以「潮境」為名的這個公園，因為位於漁港及漁村旁，便希望以這個名稱為地方帶來源源不絕的蘊藏與豐收。
             </p>
             <img src="./images/park.jpg">
