--- a/html/index/index.html
+++ b/html/index/index.html
@@ -152,7 +152,7 @@
         <div class="text">
           <p class="title" data-aos="fade">海口味</p>
           <p class="content" data-aos="fade-up">
-            基隆港全台聞名，港區範圍直入市中心區，是港灣城市中少見的特例，，靠海的基隆，生活離不開海洋，受到歷史與移民因素影響，基隆可以嚐到豐富而多樣的美食，來此感受一下海口人重口味!
+            基隆港全台聞名，港區範圍直入市中心區，是港灣城市中少見的特例，靠海的基隆，生活離不開海洋，受到歷史與移民因素影響，基隆可以嚐到豐富而多樣的美食，來此感受一下海口人重口味!
             <br />
             <br />
             巷弄的基隆，是不是有似曾相識的感覺呢？漫漫雨都的動人風情在許多電影、MV、電視劇裡都能看見，讓我們跟著經典畫面來場雨都邂逅。
