--- a/html/recommend/recommend.html
+++ b/html/recommend/recommend.html
@@ -142,7 +142,7 @@
                 八斗子車站
               </p>
               <p class="content" id="bike">
-                有「北台灣多良車站」的八斗子車站是臺灣鐵路管理局所屬深澳線位在基隆市中正區砂子里的鐵路車站，，全線最後1989年停止辦理客、貨運，為復駛供八斗子國立海洋科技博物館聯外交通使用做準備，2014年1月9日起正式恢復營運載客。
+                有「北台灣多良車站」的八斗子車站是臺灣鐵路管理局所屬深澳線位在基隆市中正區砂子里的鐵路車站，全線最後1989年停止辦理客、貨運，為復駛供八斗子國立海洋科技博物館聯外交通使用做準備，2014年1月9日起正式恢復營運載客。
               </p>
               <img src="./images/station.png">
           </div>
@@ -164,7 +164,7 @@
               深澳鐵道自行車
             </p>
             <p class="content" id="spot">
-              由新北市政府與交通部臺灣鐵路管理局合作打造的深澳鐵道自行車，以暢遊山海為主題，結合了沿岸無敵海景、自然生態、改造礦坑和鐵道等特色，讓遊客可以騎著外型超萌的彩色河豚造型自行車，在踩踏中一邊看海吹海風，，所有旅行的願望一次滿足。
+              由新北市政府與交通部臺灣鐵路管理局合作打造的深澳鐵道自行車，以暢遊山海為主題，結合了沿岸無敵海景、自然生態、改造礦坑和鐵道等特色，讓遊客可以騎著外型超萌的彩色河豚造型自行車，在踩踏中一邊看海吹海風，所有旅行的願望一次滿足。
             </p>
             <img src="./images/bike.jpg">
           </div>
@@ -185,7 +185,7 @@
               望海巷石頭火鍋
             </p>
             <p class="content" id="mu">
-              八斗子車站因鄰近望幽谷、潮境公園等景點，因此周邊美食店家林立，因此周邊美食店家林立，其中的望海巷石頭火鍋頗具特色，濃郁的湯頭配上豐富的基隆海產，是您不可錯過的美食呦!錯過的美食呦!
+              八斗子車站因鄰近望幽谷、潮境公園等景點，因此周邊美食店家林立，因此周邊美食店家林立，其中的望海巷石頭火鍋頗具特色，濃郁的湯頭配上豐富的基隆海產，是您不可錯過的美食呦!
             </p>
             <img src="./images/food.jpg">
           </div>
