--- a/html/custom/custom.html
+++ b/html/custom/custom.html
@@ -13,6 +13,11 @@
     <link href="../navbar.css" rel="stylesheet" />
     <link href="../footer.css" rel="stylesheet" />
     <link rel="icon" href="./icon/title_icon.ico" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://npmcdn.com/leaflet@0.7.7/dist/leaflet.css"
+    />
+    <script src="https://npmcdn.com/leaflet@0.7.7/dist/leaflet.js"></script>
   </head>
   <body>
     <nav class="navbar">
@@ -98,7 +103,8 @@
     </div>
     <div class="bread">
       <div class="center">
-        <a href="../index/index.html">首頁</a > / <a href="#"a>行程安排</a> / <span>推薦行程</span>
+        <a href="../index/index.html">首頁</a> / <a href="#" a>行程安排</a> /
+        <span>推薦行程</span>
       </div>
     </div>
     <main class="main">
@@ -187,29 +193,31 @@
       <article class="goto">
         <img class="vector" src="./icon/Vector 3.png" />
         <div class="stop_1">
-          <p>停靠站1</p>
+          <p>停靠站1<button class="res">重選</button></p>
+
           <img class="plus" src="./icon/plus.png" />
         </div>
         <div class="stop_2">
-          <p>停靠站2</p>
+          <p>停靠站2<button class="res">重選</button></p>
           <img class="plus" src="./icon/plus.png" />
         </div>
         <div class="stop_3">
-          <p>停靠站3</p>
+          <p>停靠站3<button class="res">重選</button></p>
         </div>
       </article>
       <article class="next">
         <div class="background">
           <p class="time">路程規劃時間</p>
-          <div class="map">
-            <iframe
+          <div id="map">
+            this
+            <!-- <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28895.236207871327!2d121.73333815953364!3d25.13891846670842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x345d4e4456aeee69%3A0xe0644dd52b7522f3!2z5Z-66ZqG5YWn5riv!5e0!3m2!1szh-TW!2stw!4v1634827639547!5m2!1szh-TW!2stw"
               width="475"
               height="390"
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
-            ></iframe>
+            ></iframe> -->
           </div>
           <div class="suggest">
             <p class="title">建議您規劃:<span> 3小時</span></p>
@@ -270,6 +278,146 @@
           $("aside").removeClass("-open"), $("div.light").removeClass("-on");
         });
       });
+
+      const map = L.map("map");
+      // 設定圖資來源
+      var osmUrl = "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png";
+      var osm = new L.TileLayer(osmUrl, { minZoom: 8, maxZoom: 16 });
+      map.addLayer(osm);
+      // 設定經緯度座標（以基隆市
+      map.setView(new L.LatLng(25.14038729600396, 121.75071934110419), 12);
+      //地圖設定
+    
+      //抓出所有圖片裝上事件聆聽器
+      let img = document.querySelectorAll(".content > img");
+      let stop_1 = document.querySelector(".stop_1 p");
+      let stop_2 = document.querySelector(".stop_2 p");
+      let stop_3 = document.querySelector(".stop_3 p");
+
+      for (let i = 0; i < img.length; i++) {
+        img[i].addEventListener("dragstart", startDrag);
+        img[i].addEventListener("dragend", null);
+      }
+
+      //設定可以停在裡面
+      stop_1.addEventListener("dragover", (e) => e.preventDefault());
+      stop_2.addEventListener("dragover", (e) => e.preventDefault());
+      stop_3.addEventListener("dragover", (e) => e.preventDefault());
+
+      //設定可以放下
+      stop_1.addEventListener("drop", dropped);
+      stop_2.addEventListener("drop", dropped);
+      stop_3.addEventListener("drop", dropped);
+
+      function startDrag(e) {
+        let data = e.target;
+        // console.log(e.target);
+        // e.dataTransfer.setData('image/jpeg',data);
+        e.dataTransfer.setData("shin", data.getAttribute("src")); // 自行命名
+        e.dataTransfer.setData("imgClass", data.getAttribute("class")); // 自行命名
+      }
+      function dropped(e) {
+        e.preventDefault();
+        e.target.innerHTML = `<button class="res">重選</button> <img class=${e.dataTransfer.getData(
+          "imgClass"
+        )} src=${e.dataTransfer.getData("shin")}>`;
+
+        //先在外部宣告
+        let marker_1;
+        let marker_2;
+        let marker_3;
+        let marker_4;
+        let marker_5;
+        let marker_6;
+        let marker_7;
+        let marker_8;
+        let marker_9;
+        let marker_10;
+        let marker_11;
+        let marker_12;
+        
+        //開始判斷現在丟進去的地點
+        if (this.children[1].classList[0] == "point_1") {
+          marker_1 = L.marker([25.162737546248735, 121.70686811366318]).addTo(map);
+          map.panTo(L.latLng(25.162737546248735, 121.70686811366318));
+          marker_1.bindPopup("老鷹岩");
+          marker_1.openPopup();
+        } else if (this.children[1].classList[0] == "point_2") {
+          marker_2 = L.marker([25.13645238587383, 121.80312005974466]).addTo(map);
+          map.panTo(L.latLng(25.13645238587383, 121.80312005974466));
+          marker_2.bindPopup("八斗子站");
+          marker_2.openPopup();
+        } else if (this.children[1].classList[0] == "point_3") {
+          marker_3 = L.marker([25.13488553538289, 121.80557745221616]).addTo(map);
+          map.panTo(L.latLng(25.13488553538289, 121.80557745221616));
+          marker_3.bindPopup("鐵道自行車");
+          marker_3.openPopup();
+        } else if (this.children[1].classList[0] == "point_4") {
+          marker_4 = L.marker([25.14612667075538, 121.79781919836209]).addTo(map);
+          map.panTo(L.latLng(25.14612667075538, 121.79781919836209));
+          marker_4.bindPopup("望幽谷");
+          marker_4.openPopup();
+        } else if (this.children[1].classList[0] == "point_5") {
+          marker_5 = L.marker([25.143956325767046, 121.80343820974633]).addTo(map);
+          map.panTo(L.latLng(25.143956325767046, 121.80343820974633));
+          marker_5.bindPopup("潮境公園");
+          marker_5.openPopup();
+        } else if (this.children[1].classList[0] == "point_6") {
+          marker_6 = L.marker([25.146724553458714, 121.74328647559278]).addTo(map);
+          map.panTo(L.latLng(25.146724553458714, 121.74328647559278));
+          marker_6.bindPopup("火號山");
+          marker_6.openPopup();
+        } else if (this.children[1].classList[0] == "point_7") {
+          marker_7 = L.marker([25.15293056999333, 121.76903683051896]).addTo(map);
+          map.panTo(L.latLng(25.15293056999333, 121.76903683051896));
+          marker_7.bindPopup("正濱漁港");
+          marker_7.openPopup();
+        } else if (this.children[1].classList[0] == "point_8") {
+          marker_8 = L.marker([25.14055351107385, 121.79861702221025]).addTo(map);
+          map.panTo(L.latLng(25.14055351107385, 121.79861702221025));
+          marker_8.bindPopup("海科館");
+          marker_8.openPopup();
+        } else if (this.children[1].classList[0] == "point_9") {
+          marker_9 = L.marker([25.146079103040943, 121.74813122163108]).addTo(map);
+          map.panTo(L.latLng(25.146079103040943, 121.74813122163108));
+          marker_9.bindPopup("佛手洞");
+          marker_9.openPopup();
+        } else if (this.children[1].classList[0] == "point_10") {
+          marker_10 = L.marker([25.144915797918, 121.77566111583054]).addTo(map);
+          map.panTo(L.latLng(25.144915797918, 121.77566111583054));
+          marker_10.bindPopup("槓子寮山");
+          marker_10.openPopup();
+        } else if (this.children[1].classList[0] == "point_11") {
+          marker_11 = L.marker([25.165510450018964, 121.72023593678324]).addTo(map);
+          map.panTo(L.latLng(25.165510450018964, 121.72023593678324));
+          marker_11.bindPopup("外木山步道");
+          marker_11.openPopup();
+        } else if (this.children[1].classList[0] == "point_12") {
+          marker_12 = L.marker([25.156171080642697, 121.74774531371027]).addTo(map);
+          map.panTo(L.latLng(25.156171080642697, 121.74774531371027));
+          marker_12.bindPopup("基隆燈塔");
+          marker_12.openPopup();
+        }
+
+        let markers = [marker_1, marker_2, marker_3, marker_4, marker_5, marker_6, marker_7, marker_8, marker_9, marker_10, marker_11, marker_12];
+        const prange = e.target;
+        e.target.children[0].addEventListener("click", function() {
+          if(prange.children[1].style.display !== "none"){
+            const imgNumber =  prange.children[1].classList[0].replace("point_","");//把point濾掉，回傳空字串，或是自訂名稱
+            prange.children[1].style.display = "none";
+            if(e.path[1].classList == "stop_1"){
+              prange.insertAdjacentHTML("afterbegin", `停靠站1`) 
+              map.removeLayer(markers[Number(imgNumber)-1]);//先把imgNumber轉成數字，再減1，再回markers陣列裡找出符合索引值的值。
+            }else if(e.path[1].classList == "stop_2"){
+              prange.insertAdjacentHTML("afterbegin", `停靠站2`) 
+              map.removeLayer(markers[Number(imgNumber)-1]);
+            }else if(e.path[1].classList == "stop_3"){
+              prange.insertAdjacentHTML("afterbegin", `停靠站3`) 
+              map.removeLayer(markers[Number(imgNumber)-1]);
+            }
+          }
+        })
+      }
     </script>
   </body>
 </html>
