--- a/html/index/index.html
+++ b/html/index/index.html
@@ -12,7 +12,8 @@
   <link rel="icon" href="./icon/title_icon.ico" type="image/x-icon" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="./index_rwd.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+  <!-- <link rel="stylesheet" href="./slick-theme.css"/> -->
+  <link rel="stylesheet" href="./slick.css"/>
 </head>
 <body>
   <nav class="navbar">
@@ -166,7 +167,7 @@
     <article class="start">
       <p>現在，開始你的基隆之旅吧!</p>
     </article>
-    <article class="theme" data-aos="fade-up-right">
+    <article class="theme" >
       <div class="icon" >
         <img src="./icon/theme.png">
       </div>
@@ -179,12 +180,43 @@
           </div>
         </div>
         <div class="images">
-          <a href="../mountain/mountain.html"><img class="rwd" src="./images/vector/the1.png"></a>
+          <!-- <a href="../mountain/mountain.html"><img class="rwd" src="./images/vector/the1.png"></a>
           <a href="../mountain/mountain.html"><img class="down" src="./images/vector/the2.png"></a>
-          <a href="../mountain/mountain.html"><img class="last" src="./images/vector/the3.png"></a>
-        </div>
+          <a href="../mountain/mountain.html"><img class="last" src="./images/vector/the3.png"></a> -->
+          <!-- 輪播套件 -->
+           <div class="snack_slick_block">
+            <ul class="round_snack">
+              <li class="sna_slider">
+                <a href="../mountain/mountain.html"><img src="./images/vector/the1.png"></a>
+              </li>
+              <li class="sna_slider">
+                <a href="../mountain/mountain.html"><img src="./images/vector/the2.png"></a>
+              </li>
+              <li class="sna_slider">
+                <a href="../mountain/mountain.html"><img src="./images/vector/the3.png"></a>
+              </li>
+              <li class="sna_slider">
+                <a href="../mountain/mountain.html"><img src="./images/vector/the1.png"></a>
+              </li>
+              <li class="sna_slider">
+                <a href="../mountain/mountain.html"><img src="./images/vector/the2.png"></a>
+              </li>
+              <li class="sna_slider">
+                <a href="../mountain/mountain.html"><img src="./images/vector/the3.png"></a>
+              </li>
+              <li class="sna_slider">
+                <a href="../mountain/mountain.html"><img src="./images/vector/the1.png"></a>
+              </li>
+              <li class="sna_slider">
+                <a href="../mountain/mountain.html"><img src="./images/vector/the2.png"></a>
+              </li>
+              <li class="sna_slider">
+                <a href="../mountain/mountain.html"><img src="./images/vector/the3.png"></a>
+              </li>
+            </ul>
+          </div> 
+        </div> 
       </div>
-    </article>
     <div class="banner_3"></div>
     <article class="proman">
       <div class="background_2"></div>
@@ -242,15 +274,30 @@
   <script>
     AOS.init();
   </script>
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="../vendors/JQuery/JQueryCDN.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="index.js"></script>
+  <script src="./slick.js"></script>
   <script>
-    var swiper = new Swiper(".mySwiper", {
-      effect: "cards",
-      grabCursor: true,
-    });
+    $(document).ready(function(){
+        $('ul.round_snack').slick({
+          dots: false,
+          slidesToShow: 3,
+          slidesToScroll: 3,
+          prevArrow: "<button type='button' class='slick-prev slick-arrow'><img src='icon/left_vector.svg' width='35'></button>",
+          nextArrow:"<button type='button' class='slick-next slick-arrow'><img src='icon/right_vector.svg' width='35'></button>",
+          responsive: [
+            {
+              breakpoint: 480,
+              settings: {
+                slidesToShow: 1,
+                slidesToScroll: 1,
+              }
+            }
+          ]
+        });
+
+      })
   </script>
 </body>
 </html>
