--- a/html/index/index.html
+++ b/html/index/index.html
@@ -180,41 +180,11 @@
           </div>
         </div>
         <div class="images">
-          <!-- <a href="../mountain/mountain.html"><img class="rwd" src="./images/vector/the1.png"></a>
+          <a href="../mountain/mountain.html"><img class="rwd" src="./images/vector/the1.png"></a>
           <a href="../mountain/mountain.html"><img class="down" src="./images/vector/the2.png"></a>
-          <a href="../mountain/mountain.html"><img class="last" src="./images/vector/the3.png"></a> -->
+          <a href="../mountain/mountain.html"><img class="last" src="./images/vector/the3.png"></a>
           <!-- 輪播套件 -->
-           <div class="snack_slick_block">
-            <ul class="round_snack">
-              <li class="sna_slider">
-                <a href="../mountain/mountain.html"><img src="./images/vector/the1.png"></a>
-              </li>
-              <li class="sna_slider">
-                <a href="../mountain/mountain.html"><img src="./images/vector/the2.png"></a>
-              </li>
-              <li class="sna_slider">
-                <a href="../mountain/mountain.html"><img src="./images/vector/the3.png"></a>
-              </li>
-              <li class="sna_slider">
-                <a href="../mountain/mountain.html"><img src="./images/vector/the1.png"></a>
-              </li>
-              <li class="sna_slider">
-                <a href="../mountain/mountain.html"><img src="./images/vector/the2.png"></a>
-              </li>
-              <li class="sna_slider">
-                <a href="../mountain/mountain.html"><img src="./images/vector/the3.png"></a>
-              </li>
-              <li class="sna_slider">
-                <a href="../mountain/mountain.html"><img src="./images/vector/the1.png"></a>
-              </li>
-              <li class="sna_slider">
-                <a href="../mountain/mountain.html"><img src="./images/vector/the2.png"></a>
-              </li>
-              <li class="sna_slider">
-                <a href="../mountain/mountain.html"><img src="./images/vector/the3.png"></a>
-              </li>
-            </ul>
-          </div> 
+           
         </div> 
       </div>
     <div class="banner_3"></div>
