--- a/html/index/index.html
+++ b/html/index/index.html
@@ -167,7 +167,7 @@
     <article class="start">
       <p>現在，開始你的基隆之旅吧!</p>
     </article>
-    <article class="theme" >
+    <article class="theme" data-aos="fade-up-right">
       <div class="icon" >
         <img src="./icon/theme.png">
       </div>
