--- a/html/index/index.html
+++ b/html/index/index.html
@@ -244,7 +244,7 @@
   </script>
   <script src="../vendors/JQuery/JQueryCDN.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
  
 </body>
 </html>
