--- a/html/recommend/recommend.html
+++ b/html/recommend/recommend.html
@@ -301,6 +301,12 @@
           $("aside").removeClass("-open"), $("div.light").removeClass("-on");
         });
       });
+      $(window).on("click",(e) =>{
+          const light = document.querySelector(".light");
+          if(e.target == light){
+          $("aside").removeClass("-open"), $("div.light").removeClass("-on");
+          }
+        });
   </script>
    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
    <script>
